# wavplayer

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  wavhdr.c  wavread.c  wavwrite.c
src/: wavhdr.h
